# pySPEEDY

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  LICENSE  MANIFEST.in  Makefile  NOTES.md  README.md  README.rst  build.sh  environment.yml  meson.build  namelist.nml  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: check_black.yml  run_tests.yml
docs/: build_docs.sh  conf.py  example_gallery.rst  index.rst  pyspeedy_reference.rst  requirements.txt  speedy_f90_ford_project_file.md  user_guide.rst
docs/dev_reference/: callbacks.rst  pyspeedy.rst
docs/examples/: Ensemble_forecast.nblink  My_first_forecast.nblink
docs/source/: conf.py  index.rst  speedy_f90_ford_project_file.md  speedy_f90_reference.rst
docs/source/examples/: My_first_forecast.nblink
examples/: Ensemble_forecast.ipynb  My_first_forecast.ipynb  run_speedy.py
pyspeedy/: __init__.py  callbacks.py  error_codes.py  speedy.py
pyspeedy/data/: example_bc.nc  model_state.json
pyspeedy/tests/: test_speedy.py
pyspeedy/tests/fixtures/: 1982-01-02_0000.nc  1982-01-04_0000.nc  198201020000.nc  198201040000.nc  make_fixtures.py
registry/: README  README.md  model_state_def.py
registry/templates/: model_state.f90.j2  model_state_def.html  pyspeedy.f90.j2  speedy_driver.f90.j2
source/: .f2py_f2cmap  Makefile  boundaries.f90  convection.f90  coupler.f90  date.f90  diagnostics.f90  error_codes.f90  forcing.f90  fourier.f90  geometry.f90  geopotential.f90  horizontal_diffusion.f90  implicit.f90  initialization.f90  input_output.f90  interpolation.f90  land_model.f90  large_scale_condensation.f90  legendre.f90  longwave_radiation.f90  matrix_inversion.f90  model_control.f90  model_state.f90  model_variables.f90  model_vars.f90  params.f90  physical_constants.f90  physics.f90  prognostics.f90  sea_model.f90  shortwave_radiation.f90  spectral.f90  speedy.f90  speedy_prog.f90  sppt.f90  surface_fluxes.f90  tendencies.f90  time_stepping.f90  vertical_diffusion.f90
speedy.f90/: .f2py_f2cmap  Makefile  convection.f90  coupler.f90  diagnostics.f90  error_codes.f90  fourier.f90  geopotential.f90  horizontal_diffusion.f90  initialization.f90  interpolation.f90  matrix_inversion.f90  meson.build  mod_radcon.f90  model_control.f90  model_state.f90  params.f90  physics.f90  prognostics.f90  sea_model.f90  shortwave_radiation.f90  spectral.f90  speedy.f90  speedy_driver.f90  tendencies.f90  time_stepping.f90  vertical_diffusion.f90
