[metadata]
name = pyspeedy
copyright = 2021, pySPEEDY developers
author = Andrés Pérez Hortal, Sam Hatfield, Fred Kucharski, Franco Molteni
version = 0.2.0
description = Python tools for remote sensing data processing.
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 4 - Beta
    License :: Free for non-commercial use
    Programming Language :: Python :: 3
    Operating System :: Operating System :: POSIX :: Linux
url = https://github.com/aperezhortal/pySPEEDY

[options]
packages = find:
python_requires = >=3.7
setup_requires =
    setuptools
    numpy
    netCDF4
    jinja2
install_requires =
    numpy
    netCDF4
    xarray
include_package_data = True
tests_require =
    "pytest"

[options.package_data]
pyspeedy :
    data/*
    tests/fixtures/*.nc

[aliases]
test = pytest